; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/hash/extr_hashfn.c_string_hash.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/hash/extr_hashfn.c_string_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @string_hash(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @strlen(i8* %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = sub nsw i64 %9, 1
  %11 = call i64 @Min(i64 %8, i64 %10)
  store i64 %11, i64* %5, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load i64, i64* %5, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @hash_any(i8* %12, i32 %14)
  %16 = call i32 @DatumGetUInt32(i32 %15)
  ret i32 %16
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @Min(i64, i64) #1

declare dso_local i32 @DatumGetUInt32(i32) #1

declare dso_local i32 @hash_any(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
